--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,12 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <groupId>com.demo.project</groupId>
   <artifactId>Demo_Test_Learner</artifactId>
   <version>1.0</version>
+  <modules>
+    <module>demo_test_shellscript</module>
+  </modules>
 
-    <packaging>pom</packaging>
+
+  <packaging>pom</packaging>
 
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
